<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:background="#FFFFFFFF"
	android:padding="5dp">
	<SeekBar
		android:id="@+id/seek_radius"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:max="100"
		android:progress="35"
		android:padding="10px" />
	<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:padding="5dp">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/radius" />

		<TextView
			android:id="@+id/progress"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
	</LinearLayout>
	<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:padding="5dp">
		<ListView
			android:id="@id/android:list"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:background="#FFFFFF"
			android:cacheColorHint="#00000000"
			android:layout_weight="1"
			android:drawSelectorOnTop="false" />
		<TextView
			android:id="@id/android:empty"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:background="#DDDDDD"
			android:textColor="#FF000000"
			android:padding="5sp"
			android:text="@string/select_wider_radius" />
	</LinearLayout>
	<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:padding="5dp">
		<TextView
			android:id="@+id/no_own_location"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:background="#DDDDDD"
			android:textColor="#FF000000"
			android:padding="5sp"
			android:visibility="gone"
			android:text="@string/no_own_location" />
	</LinearLayout>
	<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:padding="5dp">

		<Button
			android:id="@+id/email_button"
			android:text="@string/send_email"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />

		<Button
			android:id="@+id/sms_button"
			android:text="@string/send_message"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
	</LinearLayout>

</LinearLayout>